# wind-profile-clustering

./: .gitignore  README.md  export_profiles_and_probabilities_yml.py  principal_component_analysis.py  pyproject.toml  wind_profile_clustering.py  wind_resource_fit.py
read_data/: __init__.py  dowa.py  era5.py
scripts/: export_profiles.py  run_and_export_clustering.py  run_and_export_clustering_and_fitting.py  run_and_export_fitting.py  run_and_export_prescribed.py  run_clustering.py  wind_resource_schema.yml
scripts/comparing_lidar/: era5_lidar_analysis.py  plot_a1_iqr_vs_std.py  plot_measurement_map.py
src/wind_profile_clustering/: __init__.py  clustering.py  export_profiles_and_probabilities_yml.py  plotting.py  preprocess_data.py  principal_component_analysis.py
src/wind_profile_clustering/fitting_and_prescribing/: __init__.py  fit_profile.py  prescribe_profile.py
src/wind_profile_clustering/read_data/: __init__.py  dowa.py  era5.py  fgw_lidar.py  wls7_130_lidar.py
