[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "wind-profile-clustering"
version = "1.0.0"
description = "Python code for analyzing vertical wind profile patterns using PCA and K-means clustering"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Wind Profile Clustering Contributors"}
]
keywords = ["wind energy", "clustering", "wind profiles", "airborne wind energy", "PCA", "k-means"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Atmospheric Science",
]

dependencies = [
    "numpy>=1.20.0",
    "scipy>=1.7.0",
    "matplotlib>=3.3.0",
    "pandas>=1.3.0",
    "netcdf4>=1.5.0",
    "xarray>=0.19.0",
    "scikit-learn>=1.0.0",
    "pyyaml>=5.4.0",
    "awesio @ git+https://github.com/awegroup/awesIO.git",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=3.0.0",
]

[project.urls]
Homepage = "https://github.com/awegroup/wind-profile-clustering"
Repository = "https://github.com/awegroup/wind-profile-clustering"
Documentation = "https://github.com/awegroup/wind-profile-clustering#readme"

[tool.setuptools]
packages = ["wind_profile_clustering", "wind_profile_clustering.read_data", "wind_profile_clustering.fitting_and_prescribing"]
package-dir = {"" = "src"}

[tool.setuptools.package-data]
wind_profile_clustering = ["*.py"]
